manifests/0000_50_cluster-monitoring-operator_04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  labels:
    app.kubernetes.io/managed-by: cluster-version-operator
    app.kubernetes.io/part-of: openshift-monitoring
  name: cluster-monitoring-operator
  namespace: openshift-monitoring
spec:
  egress:
  - {}
  ingress:
  - ports:
    # Allow Prometheus to scrape CMO's /metrics endpoint and allow CMO to serve
    # its HTTPS API.
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cluster-monitoring-operator
  policyTypes:
  - Ingress
  - Egress
